Use tags for creating interface and controller classnames
