# src/main/resources/swagger/workstation-api.yaml
@@ -22,6 +22,8 @@ paths:
   /api/tasks:
     get:
       description: Retrieving the collection of user tasks
+      tags:
+        - tasks
       operationId: getAllTasks
       produces:
         - application/json
@@ -34,6 +36,8 @@ paths:
               $ref: '#/definitions/Task'
     post:
       description: Creating a new user task
+      tags:
+        - tasks
       operationId: createTask
       consumes:
         - application/json
@@ -53,6 +57,8 @@ paths:
   /api/tasks/{id}:
     put:
       description: Updating an existing user task
+      tags:
+        - tasks
       operationId: updateTask
       parameters:
         - $ref: '#/parameters/id'
@@ -76,6 +82,8 @@ paths:
             $ref: '#/definitions/Message'
     delete:
       description: Deleting an existing user task
+      tags:
+        - tasks
       operationId: deleteTask
       parameters:
         - $ref: '#/parameters/id'
